--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
+    "bootstrap": "~5.1.3",
     "core-js": "^3.18.3",
+    "sass": "~1.43.4",
+    "sass-loader": "~10.2.0",
     "vue": "^3.2.21",
     "vue-axios": "^3.3.7",
     "vue-router": "^4.0.12",
