Testing de View Burgers

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@vue/test-utils": "~2.0.0-rc.16",
     "@testing-library/vue": "^6.4.2",
     "@vue/cli-plugin-babel": "^4.5.14",
     "@vue/cli-plugin-eslint": "^4.5.14",
