--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -31,7 +33,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.20.0",
+    "express": "~4.17.1",
     "jest": "~27.3.1",
+    "serve-static": "~1.14.1",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "webpack": "^4.46.0"
   },
