--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.23.0",
     "bootstrap": "~5.1.3",
     "core-js": "^3.18.3",
+    "express": "~4.17.1",
     "sass": "~1.43.4",
     "sass-loader": "~10.2.0",
+    "serve-static": "~1.14.1",
     "vue": "^3.2.21",
     "vue-axios": "^3.3.7",
     "vue-router": "^4.0.12",
